# turbo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  all-bench.sh  compile-helios.sh  config.sh  cpu-debug.sh  cpu-release.sh  gpu-debug.sh  gpu-release.sh  helios.sh  hpc-build.sh  requirements.txt  run-helios.sh  run-hpc.py  test_turbo.sh  vs.props
benchmarks/: .cache  Brown-05.fzn  aaai22.json  accap_a3.fzn  config.json  example_wordpress7_500.fzn  gen.sh  load_experiments.ipynb  local.sh  runtime_analysis.ipynb  simple.xml  statistics.csv  test_list.csv  trains15.fzn
benchmarks-xml/: patterson-300-432-256-16.csv  patterson-300-432-256-18.csv
benchmarks-xml/j30-xml/: j30_0.xml  j30_102.xml  j30_109.xml  j30_11.xml  j30_115.xml  j30_117.xml  j30_120.xml  j30_122.xml  j30_123.xml  j30_124.xml  j30_126.xml  j30_127.xml  j30_128.xml  j30_129.xml  j30_13.xml  j30_130.xml  j30_132.xml  j30_136.xml  j30_139.xml  j30_143.xml  j30_144.xml  j30_146.xml  j30_149.xml  j30_15.xml  j30_153.xml  j30_154.xml  j30_155.xml  j30_156.xml  j30_157.xml  j30_158.xml  j30_161.xml  j30_162.xml  j30_165.xml  j30_166.xml  j30_168.xml  j30_17.xml  j30_172.xml  j30_175.xml  j30_177.xml  j30_178.xml  (+210 more)
benchmarks-xml/j60-xml/: j6010_1.xml  j6010_10.xml  j6010_2.xml  j6010_3.xml  j6010_4.xml  j6010_6.xml  j6010_9.xml  j6011_10.xml  j6011_3.xml  j6011_4.xml  j6011_9.xml  j6012_3.xml  j6012_5.xml  j6012_6.xml  j6012_7.xml  j6013_1.xml  j6013_2.xml  j6013_4.xml  j6013_6.xml  j6014_1.xml  j6014_10.xml  j6014_2.xml  j6014_3.xml  j6015_10.xml  j6015_2.xml  j6015_4.xml  j6015_6.xml  j6015_7.xml  j6015_9.xml  j6016_5.xml  j6016_6.xml  j6017_1.xml  j6017_4.xml  j6017_7.xml  j6017_8.xml  j6018_10.xml  j6018_2.xml  j6018_3.xml  j6019_1.xml  j6019_2.xml  (+219 more)
benchmarks-xml/patterson-xml/: pat0.xml  pat10.xml  pat103.xml  pat104.xml  pat105.xml  pat108.xml  pat109.xml  pat11.xml  pat13.xml  pat14.xml  pat15.xml  pat19.xml  pat2.xml  pat20.xml  pat21.xml  pat23.xml  pat26.xml  pat27.xml  pat29.xml  pat31.xml  pat32.xml  pat33.xml  pat34.xml  pat36.xml  pat39.xml  pat4.xml  pat40.xml  pat42.xml  pat44.xml  pat45.xml  pat46.xml  pat48.xml  pat49.xml  pat5.xml  pat50.xml  pat54.xml  pat55.xml  pat56.xml  pat57.xml  pat59.xml  (+26 more)
benchmarks/analyzing/: analysis-v1.0.1.ipynb  analysis-v1.1.0-A100.ipynb  analysis.ipynb  analysis.py  mznbench_check.sh  mznbench_collect.sh  runtime_analysis.ipynb
benchmarks/benchmarking/: bench-A100-graph-labelling.py  bench-A100.py  bench.py  configure.sh  cuda_wrap.sh  dump.py  graph-labelling-pos1024.csv  graph-labelling-pos256.csv  graph-labelling-pos64.csv  graph-labelling.csv  mzn2021-23.csv  mzn2022.csv  mznpy-one.py  rcpsp.csv  run.sh  short.csv  slurm.sh  slurm_config.sh
benchmarks/campaign/: baseline-objectives.csv  baseline.csv  turbo-v1.0.1-objectives.csv  turbo-v1.0.1.csv  turbo-v1.1.0-A100-objectives.csv  turbo-v1.1.0-A100.csv  turbo.gpu.profiling-v1.1.7-A100-objectives.csv  turbo.gpu.profiling-v1.1.7-A100.csv  turbo.gpu.release-v1.1.0-A100-objectives.csv  turbo.gpu.release-v1.1.0-A100.csv  turbo.gpu.release-v1.1.0-A5000-objectives.csv  turbo.gpu.release-v1.1.0-A5000.csv  turbo.gpu.release-v1.1.1-A100-objectives.csv  turbo.gpu.release-v1.1.1-A100.csv  turbo.gpu.release-v1.1.1-A5000-objectives.csv  turbo.gpu.release-v1.1.1-A5000.csv  turbo.gpu.release-v1.1.2-A100-objectives.csv  turbo.gpu.release-v1.1.2-A100.csv  turbo.gpu.release-v1.1.2-A5000-objectives.csv  turbo.gpu.release-v1.1.2-A5000.csv  turbo.gpu.release-v1.1.3-A100-objectives.csv  turbo.gpu.release-v1.1.3-A100.csv  turbo.gpu.release-v1.1.3-A5000-objectives.csv  turbo.gpu.release-v1.1.3-A5000.csv  turbo.gpu.release-v1.1.4-A5000-objectives.csv  turbo.gpu.release-v1.1.4-A5000.csv  turbo.gpu.release-v1.1.5-A5000-objectives.csv  turbo.gpu.release-v1.1.5-A5000.csv  turbo.gpu.release-v1.1.6-A5000-objectives.csv  turbo.gpu.release-v1.1.6-A5000.csv  turbo.gpu.release-v1.1.7-A100-objectives.csv  turbo.gpu.release-v1.1.7-A100.csv  turbo.gpu.release-v1.1.7-A5000-objectives.csv  turbo.gpu.release-v1.1.7-A5000.csv  turbo.gpu.release-v1.2.0-A5000.csv
benchmarks/config/: config.yml
benchmarks/data-fzn/: sudoku_opt4.fzn
benchmarks/kobe/: kobe.py
benchmarks/minizinc/: turbo.cpu.release.msc  turbo.gpu.release.msc
benchmarks/profiling/: profiling.sh  short.csv
benchmarks/table/: Dubois-021.xml  Dubois-022.xml  Dubois-025.xml  Dubois-050.xml  Dubois-080.xml  Dubois-090.xml  Kakuro-easy-084-ext.xml  Kakuro-easy-109-ext.xml  Kakuro-easy-150-ext.xml  Nonogram-018-table.xml  Nonogram-035-table.xml  Nonogram-168-table.xml  Nonogram-177-table.xml  RenaultMod-09.xml  RenaultMod-12.xml  RenaultMod-18.xml  RenaultMod-21.xml  RenaultMod-24.xml  RenaultMod-40.xml
benchmarks/test_data/: bug1.fzn  bug2.fzn  bug3.fzn  bug4.fzn  bug5.fzn  cumulative.xml  maximize_unconstrained.fzn  minimize_unconstrained.fzn  minimize_unconstrained2.fzn  pat1.fzn  pat10.fzn  pat11.fzn  pat12.fzn  pat13.fzn  pat2.fzn  pat3.fzn  pat4.fzn  pat5.fzn  pat6.fzn  pat7.fzn  pat8.fzn  pat9.fzn  pennies5.fzn  reified_in.fzn  sudoku_opt2.fzn  sudoku_opt2_max.fzn  sudoku_opt3.fzn  sudoku_opt3b.fzn  sudoku_opt4b.fzn  sudoku_opt_p0.fzn  triangular9.fzn
benchmarks/unsolved_bugs_data/: bigdom.fzn  false.fzn  valve6.fzn
benchmarks2/: config.json  local.sh
benchmarks2/hpc/: run-hpc.py
hpc/: compile-helios.sh
include/: XCSP3_turbo_callbacks.hpp  abort.hpp  ast.hpp  barebones_dive_and_solve.hpp  common_solving.hpp  config.hpp  constraints.cuh  cp.hpp  cpu_gpu_solving.hpp  cpu_solving.hpp  cuda_helper.hpp  fbarebones_dive_and_solve.hpp  gpu_dive_and_solve.hpp  gpu_solving.hpp  hybrid_dive_and_solve.hpp  lir_solving.hpp  memory.cuh  memory.hpp  memory_gpu.hpp  model_builder.hpp  nnv.hpp  propagators.cuh  propagators.hpp  search.cuh  search.hpp  solver.cuh  solver.hpp  statistics.cuh  statistics.hpp  status.cuh  terms.hpp  type_inference.hpp  vstore.cuh  vstore.hpp
include/lang/: ast.hpp
src/: config.cpp  main.cpp  main.cu  memory.cpp  memory.cu  propagators.cpp  propagators.cu  solver.cpp  solver.cu  turbo.cpp  turbo.cu
(+22242 files in other folders)
